return user participation field
