# docs/swagger.json
@@ -351,16 +351,13 @@
                 "id": {
                     "type": "integer"
                 },
-                "is_staff": {
-                    "type": "boolean"
-                },
                 "last_name": {
                     "type": "string"
                 },
                 "participation": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/handlers.participation"
+                        "$ref": "#/definitions/models.Participation"
                     }
                 },
                 "project_count": {
@@ -371,17 +368,6 @@
                 },
                 "username": {
                     "type": "string"
-                }
-            }
-        },
-        "handlers.participation": {
-            "type": "object",
-            "properties": {
-                "count": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "integer"
                 }
             }
         },
@@ -412,6 +398,20 @@
                     "type": "boolean"
                 },
                 "payment": {
+                    "type": "integer"
+                },
+                "project": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.Participation": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "id": {
                     "type": "integer"
                 }
             }
