# internal/app/handlers/user.go
@@ -5,48 +5,14 @@ import (
 	"strconv"
 
 	"github.com/FreakyGranny/launchpad-api/internal/app/models"
-	"github.com/dgrijalva/jwt-go"
 	"github.com/labstack/echo/v4"
+	"github.com/labstack/gommon/log"
 )
 
 type extendedUser struct {
-	ID            uint             `json:"id"`
-	Username      string           `json:"username"`
-	FirstName     string           `json:"first_name"`
-	LastName      string           `json:"last_name"`
-	Avatar        string           `json:"avatar"`
-	IsStaff       bool             `json:"is_staff"`
-	ProjectCount  uint             `json:"project_count"`
-	SuccessRate   float32          `json:"success_rate"`
-	Participation *[]participation `json:"participation"`
+	models.User
+	Participation []models.Participation `json:"participation"`
 }
-
-type participation struct {
-	Cnt           uint `json:"count"`
-	ProjectTypeID uint `json:"id"`
-}
-
-// func extendUser(user db.User) extendedUser {
-// 	dbClient := db.GetDbClient()
-// 	var participations []participation
-
-// 	dbClient.Table("donations as d").Select("count(d.id) as cnt, p.project_type_id").
-// 						  Joins("left join projects as p on p.id = d.project_id").
-// 						  Where("user_id = ?", user.ID).
-// 						  Group("p.project_type_id").Scan(&participations)
-
-// 	return extendedUser{
-// 		ID: user.ID,
-// 		Username: user.Username,
-// 		FirstName: user.FirstName,
-// 		LastName: user.LastName,
-// 		Avatar: user.Avatar,
-// 		IsStaff: user.IsStaff,
-// 		ProjectCount: user.ProjectCount,
-// 		SuccessRate: user.SuccessRate,
-// 		Participation: &participations,
-// 	}
-// }
 
 // UserHandler ...
 type UserHandler struct {
@@ -68,16 +34,25 @@ func NewUserHandler(u models.UserImpl) *UserHandler {
 // @Security Bearer
 // @Router /user [get]
 func (h *UserHandler) GetCurrentUser(c echo.Context) error {
-	userToken := c.Get("user").(*jwt.Token)
-	claims := userToken.Claims.(jwt.MapClaims)
-	userID := claims["id"].(float64)
-
-	user, ok := h.UserModel.FindByID(int(userID))
+	userID, err := getUserIDFromToken(c.Get("user"))
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, err)
+	}
+	user, ok := h.UserModel.FindByID(userID)
 	if !ok {
 		return c.JSON(http.StatusNotFound, nil)
 	}
 
-	return c.JSON(http.StatusOK, user)
+	pts, err := h.UserModel.GetParticipation(userID)
+	if err != nil {
+		log.Error(err)
+		return c.JSON(http.StatusInternalServerError, errorResponse("cant get participation"))
+	}
+
+	return c.JSON(http.StatusOK, extendedUser{
+		User:          *user,
+		Participation: pts,
+	})
 }
 
 // GetUser godoc
@@ -99,7 +74,14 @@ func (h *UserHandler) GetUser(c echo.Context) error {
 	if !ok {
 		return c.JSON(http.StatusNotFound, nil)
 	}
+	pts, err := h.UserModel.GetParticipation(intID)
+	if err != nil {
+		log.Error(err)
+		return c.JSON(http.StatusInternalServerError, errorResponse("cant get participation"))
+	}
 
-	return c.JSON(http.StatusOK, user)
-	// return c.JSON(http.StatusOK, extendUser(user))
+	return c.JSON(http.StatusOK, extendedUser{
+		User:          *user,
+		Participation: pts,
+	})
 }
